Fixing section spacing between content and title

--- a/my-portfolio/src/css/aboutMe.css
+++ b/my-portfolio/src/css/aboutMe.css
@@ -25,7 +25,7 @@
   
 .imageWrapper img {
   border-radius: 5%;
-  width: 20%;
+  width: 25%;
   height: auto;
   display: block;
   position: relative;
