--- a/my-portfolio/src/css/common.css
+++ b/my-portfolio/src/css/common.css
@@ -31,8 +31,8 @@
   margin-left: 2vw;;
 }
 
-.bottomMargin-XXL{
-  margin-bottom: 5vw;
+.bottomMarginL{
+  margin-bottom: 4vw;
 }
 
 /* Text Styling */
